--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -4,7 +4,11 @@ body {
 }
 
 .rest-navbar {
-    background-color: #1782b9;
+    background-color: rgb(43, 97, 144);
+}
+
+.rest-navbar-brand {
+    color: rgb(255, 255, 255);
 }
 
 .modal {
